# Claims-Workbench

./: .gitignore  README.md  f_requirements.txt  index.css
backend/: inject_demo_settlements.py  inject_more_settlements.py  main.py  pyproject.toml  requirements.txt  seed.err  seed_data.py
backend/app/: auth.py  config.py  database.py
backend/app/models/: models.py
backend/app/routers/: ai.py  auth.py  claims.py  manager.py  policies.py  sub_claims.py
backend/app/schemas/: schemas.py
backend/app/services/: agent_service.py
frontend/: package-lock.json  package.json  tailwind.config.js
frontend/src/: App.js  index.css
frontend/src/components/: AIPanel.js  AISidebar.js  GenAIInsightButton.js  Sidebar.js  TopBar.js
frontend/src/context/: AuthContext.js
frontend/src/pages/: ClaimsRegistry.js  Claims_Workbench .code-workspace  Dashboard.js  Landing.js  Login.js  Placeholder.js
frontend/src/pages/fnol/: AIFnolCopilot.js  NewClaim.js  PriorityTasks.js
frontend/src/pages/fnol/steps/: DocumentStep.js  LossStep.js  PolicyStep.js  SubjectStep.js
frontend/src/pages/handler/: ClaimHandler.js
frontend/src/pages/handler/tabs/: ClaimSummaryTab.js  CompanyInfoTab.js  PolicyDetailsTab.js  SubClaimListTab.js  TaskManagementTab.js
frontend/src/pages/manager/: ManagerDashboard.js
frontend/src/pages/subclaim/: SubClaimDetail.js
frontend/src/pages/subclaim/tabs/: ClaimDocTab.js  FinancialsTab.js  LegalTab.js  StakeholderTab.js  SubClaimInfoTab.js  TasksTab.js
frontend/src/services/: api.js
